Correção dos erros de Parcelable, integração entre as telas de compras e finalização.